# orcamentos

./: +  README.md  app.py  calculos.py  gerador_pdf.py  main.py  pyproject.toml
