[project]
name = "orcamentos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fpdf>=1.7.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "numpy-financial>=1.0.0",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "streamlit>=1.52.2",
]
[tool.pyright]
venvPath = "."
venv = ".venv"
